# LazyShell

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-desktop-matrix.yml  build-windows.yml
docs/: github-actions-windows-runner.md  plan.md
docs/superpowers/plans/: 2026-03-20-terminal-pty-implementation-plan.md  2026-03-23-ai-memory-system.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  app_menu.rs  certificates.rs  commands.rs  commands_db.json  commands_db.rs  cron_tasks.rs  crypto.rs  docker_details.rs  learning.rs  lib.rs  memory.rs  service_details.rs  ssh.rs
src/components/: AIBuiltinPanel.tsx  AIChat.tsx  AIComposer.tsx  AIContextBar.tsx  AIConversationPanel.tsx  AIFavoritesPanel.tsx  AIHistoryPanel.tsx  AIIntentTabs.tsx  AIPendingActionCard.tsx  AddProviderModal.tsx  CommandCard.tsx  CronTaskManager.tsx  DockerManager.tsx  FileEditorWindow.tsx  InteractiveTerminal.tsx  ProviderSelector.css  ProviderSelector.tsx  PtyTerminal.tsx  RecentCommands.tsx  RemoteFileManager.tsx  ResizablePanels.tsx  ServerList.tsx  ServerStatus.tsx  ServiceDetailsManager.tsx  Settings.tsx  SslCertificateManager.tsx  TabBar.tsx  Terminal.tsx  UnlockScreen.css  UnlockScreen.tsx
src/hooks/: useCommandDatabase.ts  useMemory.ts
src/providers/: aiProvider.ts
src/types/: index.ts
src/utils/: remoteWindows.ts  windowRouting.ts
(+2 files in other folders)
