[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
ssh2 = "0.9"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
base64 = "0.22"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.10"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
chrono = "0.4"
